# neon-monitor

./: .gitignore  README.rst  neon_monitor.spec  setup.cfg
docs/: index.rst
src/pupil_labs/neon_monitor/: __init__.py  app.py  companion.py  companion_worker.py  widgets.py
tests/: test_api.py
