[metadata]
name = neon_monitor
description = A desktop client app to monitor Neon streams
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/pupil-labs/neon-monitor
author = Pupil Labs GmbH
author_email = info@pupil-labs.com
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

[options]
packages = find_namespace:
install_requires =
    importlib-metadata;python_version<"3.8"
    PySide6
    pupil_labs_realtime_api

python_requires = >=3.7
include_package_data = true
package_dir =
    =src

[options.packages.find]
where = src
exclude =
    build*
    dist*
    docs*
    tests*

[options.entry_points]
console_scripts =
    neon_monitor = pupil_labs.neon_monitor.app:main

[options.extras_require]
docs =
    jaraco.packaging>=9
    rst.linker>=1.9
    sphinx
testing =
    pytest>=6
    pytest-checkdocs>=2.4
    pytest-cov
    pytest-enabler>=1.3
    pytest-mypy>=0.9.1;python_implementation != "PyPy"
